custom tailwindcss & tutorials

--- a/app/views/avo/tools/settings.html.erb
+++ b/app/views/avo/tools/settings.html.erb
@@ -1,18 +1,26 @@
-<div class="flex flex-col">
-  <%= render Avo::PanelComponent.new(name: 'Settings', display_breadcrumbs: true) do |c| %>
-    <% c.with_body do %>
-      <div class="flex flex-col justify-between py-6 min-h-24">
-        <div class="px-6 space-y-4">
-          <label class="inline-block pl-[0.15rem] hover:cursor-pointer" for="flexSwitchCheckDefault">
-            Default switch checkbox input
-          </label>
-          <input
-            class="mr-2 mt-[0.3rem] h-3.5 w-8 appearance-none rounded-[0.4375rem] bg-neutral-300 before:pointer-events-none before:absolute before:h-3.5 before:w-3.5 before:rounded-full before:bg-transparent before:content-[''] after:absolute after:z-[2] after:-mt-[0.1875rem] after:h-5 after:w-5 after:rounded-full after:border-none after:bg-neutral-100 after:shadow-[0_0px_3px_0_rgb(0_0_0_/_7%),_0_2px_2px_0_rgb(0_0_0_/_4%)] after:transition-[background-color_0.2s,transform_0.2s] after:content-[''] checked:bg-primary checked:after:absolute checked:after:z-[2] checked:after:-mt-[3px] checked:after:ml-[1.0625rem] checked:after:h-5 checked:after:w-5 checked:after:rounded-full checked:after:border-none checked:after:bg-primary checked:after:shadow-[0_3px_1px_-2px_rgba(0,0,0,0.2),_0_2px_2px_0_rgba(0,0,0,0.14),_0_1px_5px_0_rgba(0,0,0,0.12)] checked:after:transition-[background-color_0.2s,transform_0.2s] checked:after:content-[''] hover:cursor-pointer focus:outline-none focus:ring-0 focus:before:scale-100 focus:before:opacity-[0.12] focus:before:shadow-[3px_-1px_0px_13px_rgba(0,0,0,0.6)] focus:before:transition-[box-shadow_0.2s,transform_0.2s] focus:after:absolute focus:after:z-[1] focus:after:block focus:after:h-5 focus:after:w-5 focus:after:rounded-full focus:after:content-[''] checked:focus:border-primary checked:focus:bg-primary checked:focus:before:ml-[1.0625rem] checked:focus:before:scale-100 checked:focus:before:shadow-[3px_-1px_0px_13px_#3b71ca] checked:focus:before:transition-[box-shadow_0.2s,transform_0.2s] dark:bg-neutral-600 dark:after:bg-neutral-400 dark:checked:bg-primary dark:checked:after:bg-primary dark:focus:before:shadow-[3px_-1px_0px_13px_rgba(255,255,255,0.4)] dark:checked:focus:before:shadow-[3px_-1px_0px_13px_#3b71ca]"
-            type="checkbox"
-            role="switch"
-            id="flexSwitchCheckDefault" />
+<turbo-frame id="settings_frame">
+  <div class="flex flex-col">
+      <%= render Avo::TutorialComponent.new(message: "On this page it's possible to customize your BO experience. It's build with custom styles that integrates with the avo tailwind styles.", user: current_user) %>
+    <%= render Avo::PanelComponent.new(name: 'Settings', display_breadcrumbs: true) do |c| %>
+      <% c.with_body do %>
+        <div class="flex flex-col justify-center py-6">
+          <div class="px-6 space-y-4">
+            <%= form_for(:settings, url: main_app.settings_path) do |form| %>
+              <%= form.hidden_field :user_id, value: current_user.id %>
+              <label for="settings_tutorial" class="flex items-center cursor-pointer">
+                <div class="relative">
+                  <%= form.check_box :tutorial, class: "sr-only", onchange: "this.form.requestSubmit();", checked: current_user.settings["tutorial"] %>
+                  <div class="block bg-gray-600 w-10 h-6 rounded-full"></div>
+                  <div class="dot absolute left-1 top-1 bg-white w-4 h-4 rounded-full transition"></div>
+                </div>
+                <div class="ml-3 text-gray-700 font-medium">
+                  Tutorials
+                </div>
+              </label>
+            <% end %>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
-  <% end %>
-</div>
+  </div>
+</turbo-frame>
