improve resources with search and filters & annotate models

--- a/app/components/avo/tutorial_component.html.erb
+++ b/app/components/avo/tutorial_component.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-center p-4 bg-[#bdd5e7] rounded-full">
+<div class="flex flex-col justify-center p-4 bg-[#bdd5e7] rounded-md">
   <%= @message %>
 </div>
 <div class="flex-1 w-full flex flex-col sm:flex-row xl:justify-end sm:items-end space-y-2 sm:space-y-0 sm:space-x-2 mt-4 xl:mt-0">
