--- a/app/assets/stylesheets/avo/tailwind.css
+++ b/app/assets/stylesheets/avo/tailwind.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss/base';
-@import '../../../../tmp/avo/base.css';
+@import '../../../../tmp/avo/avo.base.css';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
